@@ -247,6 +247,8 @@ static ClassRegister *newClassRegister(char *fname)
             if (strcmp(cr->vr->id,"sfcb-rep")) {
                mlogf(M_ERROR,M_SHOW,"--- %s contains invalid version record - directory skipped\n",fin);
 	       fclose(in);
+               free(cr);
+               free(buf);
                return NULL;
             }   
             vRec=0;
@@ -260,6 +262,8 @@ static ClassRegister *newClassRegister(char *fname)
             mlogf(M_ERROR,M_SHOW,"--- %s contains unsupported object implementation format (%d) - directory skipped\n",
                fin,v);
 	    fclose(in);
+            free(cr);
+            free(buf);
             return NULL;
          }
 
@@ -286,6 +290,8 @@ static ClassRegister *newClassRegister(char *fname)
       else {
          mlogf(M_ERROR,M_SHOW,"--- %s contains invalid record(s) - directory skipped\n",fin);
 	 fclose(in);
+         free(cr);
+         free(buf);
          return NULL;
       }
       first=0;
