@@ -361,10 +361,15 @@ static int dumpProperties(const ClClass *cls, const char *prefix)
 	     prefix, cls->properties.used, cls->properties.max);
       if (detail_properties) {
 	prefixbuf = malloc(strlen(prefix) + strlen(" -- Property[999]:") + 2);
+        if (prefixbuf == NULL) { 
+           fprintf(stderr, "out of memory\n");
+           return 1; 
+        }
 	for (i=0; i < cls->properties.used; i++) {
 	  sprintf(prefixbuf,"%s -- Property[%3d]:",prefix,i);
 	  dumpString(&cls->hdr,&cp[i].id,prefixbuf);
 	}
+        free(prefixbuf);
       }
     } else {
       fprintf(stderr,"%s to many property entries %d\n",
@@ -396,6 +401,10 @@ static int dumpQualifiers(const ClClass *cls, const char *prefix)
 	     prefix, cls->qualifiers.used, cls->qualifiers.max);
       if (detail_qualifiers) {
 	prefixbuf = malloc(strlen(prefix) + strlen(" -- Qualifier[999]:") + 2);
+        if (prefixbuf == NULL) { 
+           fprintf(stderr, "out of memory\n");
+           return 1; 
+        }
 	for (i=0; i < cls->qualifiers.used; i++) {
 	  sprintf(prefixbuf,"%s -- Qualifier[%3d]:",prefix,i);
 	  dumpString(&cls->hdr,&cq[i].id,prefixbuf);
@@ -432,10 +441,15 @@ static int dumpMethods(const ClClass *cls, const char *prefix)
 	     prefix, cls->methods.used, cls->methods.max);
       if (detail_methods) {
 	prefixbuf = malloc(strlen(prefix) + strlen(" -- Method[999]:") + 2);
+        if (prefixbuf == NULL) { 
+           fprintf(stderr, "out of memory\n");
+           return 1; 
+        }
 	for (i=0; i < cls->methods.used; i++) {
 	  sprintf(prefixbuf,"%s -- Method[%3d]:",prefix,i);
 	  dumpString(&cls->hdr,&cm[i].id,prefixbuf);
 	}
+        free(prefixbuf);
       }
     } else {
       fprintf(stderr,"%s to many method entries %d\n",
